Improvements & Fixes to the Sign In Page
- Align with actual Sign In mockups;
- Disable "Sign In" button on lack of user or password;
- Allow to login by pressing enter key;
- Stop footer from overlapping sign in form with no scroll option;
- Other misc fixes...

--- a/src/main/webapp/resources/css/olympus-v2.css
+++ b/src/main/webapp/resources/css/olympus-v2.css
@@ -526,8 +526,6 @@ a.action-disabled, .action-disabled a {
     height: 30px;
     background: #fff;
 
-    border-width: 2px;
-    border-color: #e1e1e1;
 
     font-size: 16px;
     font-family: lato;
